updated html and added css styling

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Traveller</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
     <header>
         <p class="logo">Traveller</p>
+        <section class="home">
         <h1>Excursions in the alps</h1>
-        <img src="./assets/img/bg-home.avif" alt="picture of the alps">
+        </section>
     </header>
 
     <main>
@@ -30,6 +32,7 @@
             <img src="./assets/img/picture6.avif" alt="same alp picture">
         </section>
         <section class="tourDates">
+            <h2>2022 Tour Dates</h2>
             <p>Sept 19 - 29 - Deluxe Haute Route– Chamonix to Zermatt – Classic trek has a new standard</p>
             <p>Sept 26 - Oct 5 - Scenic Alps by Rail– The Grand Train Tour of Switzerland</p>
             <p>Sept 29 - Oct 5 - Discover Swiss Cuisine - Italian Inspired - A culinary adventure in Lugano</p>
@@ -40,7 +43,7 @@
     </main>
 
     <footer>
-        <h2>Contact Us</h2>
+        <a href="#">Contact Us</a>
     </footer>
 
 </body>
